--- a/proy1/proy1/templates/saludo.html
+++ b/proy1/proy1/templates/saludo.html
@@ -15,5 +15,16 @@
     <h1>hola. saludando desde l plantilla</h1>
     <h3>texto agregado adicionalmente</h3>
 
+    <p><strong>LISTADO</strong></p>
+    <ul>
+
+        {% for cada in lista %}
+        
+        <li>{{ cada }}</li>
+        
+        {% endfor %}
+        
+    </ul>
+
 </body>
 </html>
