--- a/proy1/proy1/templates/saludo.html
+++ b/proy1/proy1/templates/saludo.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saludo</title>
-    <style>
-        h3{color:green}
-    </style>
-</head>     
-<body>
-    
+{% extends 'base.html' %}
 
+
+{% block title %}
+    titulo SALUDO
+{% endblock title %}
+
+
+{% block content %}
+    
     <h1>hola. saludando desde l plantilla</h1>
     <h3>texto agregado adicionalmente</h3>
 
@@ -25,6 +21,8 @@
         {% endfor %}
         
     </ul>
+
+{% endblock content %}
 
 </body>
 </html>
