--- a/inventory/app_inventario/templates/layouts/base.html
+++ b/inventory/app_inventario/templates/layouts/base.html
@@ -47,10 +47,10 @@
 
 
   <!-- Bootstrap Bundle with Popper -->
-  <script src="{% static 'bootstrap.bundle.min.js' %}}"
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}}"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <script src="{% static 'app.js' %}"></script>
+  <script src="{% static 'js/app.js' %}"></script>
 
 </body>
 
