--- a/inventory/app_inventario/templates/layouts/base.html
+++ b/inventory/app_inventario/templates/layouts/base.html
@@ -11,7 +11,12 @@
   <!-- Bootstrap CSS -->
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <!-- estilos propios  -->
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
+  <!-- datatables  -->
+  <link rel="stylesheet" href="//cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
   <title>{% block title %} {% endblock %}</title>
 </head>
 
@@ -41,15 +46,21 @@
     {% endblock %}
   </div>
 
-<footer class="fixed-bottom p-1 bg-secondary text-light text-end fw-bold">
-  Sistema Inventarios - Powered by CED
-</footer>
+  <footer class="fixed-bottom p-0 bg-secondary text-light text-end fw-bold">
+    Sistema Inventarios - Powered by CED
+  </footer>
 
 
+  <!-- jquery    -->
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js"
+  integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+  
   <!-- Bootstrap Bundle with Popper -->
-  <script src="{% static 'js/bootstrap.bundle.min.js' %}}"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+  <!-- <script src="{% static 'js/bootstrap.bundle.min.js' %}}"></script> -->
+
+  <!-- datatables   -->
+  <script src="//cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+
   <script src="{% static 'js/app.js' %}"></script>
 
 </body>
