--- a/inventory/app_inventario/templates/articulos.html
+++ b/inventory/app_inventario/templates/articulos.html
@@ -79,3 +79,9 @@
 </div>
 
 {% endblock content %}
+
+
+
+{% block scripts %}
+<script src="{% static 'js/app.js' %}"></script>
+{% endblock scripts %}
