--- a/inventory/app_inventario/templates/layouts/base.html
+++ b/inventory/app_inventario/templates/layouts/base.html
@@ -10,7 +10,8 @@
 
   <!-- Bootstrap CSS -->
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+     crossorigin="anonymous">
+     {% comment %} integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" {% endcomment %}
 
   <!-- estilos propios  -->
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
@@ -61,7 +62,10 @@
   <!-- datatables   -->
   <script src="//cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
 
-  <script src="{% static 'js/app.js' %}"></script>
+  {% block scripts %}
+
+    
+  {% endblock scripts %}
 
 </body>
 
