actualizando. Se agregó Umedida y carga de tabla de movimientos. Falta registrar en la base de datos

--- a/inventory/app_inventario/templates/movimientos.html
+++ b/inventory/app_inventario/templates/movimientos.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="mb-3 col-2">
                     <label for="">Umedida</label>
-                    <input class="form-control" type="text" name="umedida" id="umedida">
+                    <input class="form-control" type="text" name="umedida" id="umedida" disabled>
                 </div>
                 <div class="mb-3 col-2">
                     <label for="">cantidad</label>
@@ -64,8 +64,8 @@
                             <tr>
                                 <th>#</th>
                                 <th>Articulo</th>
+                                <th>Unidad</th>
                                 <th>Cantidad</th>
-                                <th>umedida</th>
                             </tr>
                         </thead>
                         <tbody id="tbodyMovimientos">
