--- a/inventory/app_inventario/templates/movimientos.html
+++ b/inventory/app_inventario/templates/movimientos.html
@@ -66,6 +66,7 @@
                                 <th>Articulo</th>
                                 <th>Unidad</th>
                                 <th>Cantidad</th>
+                                <th>Opciones</th>
                             </tr>
                         </thead>
                         <tbody id="tbodyMovimientos">
