--- a/nuevo2/app/templates/index.html
+++ b/nuevo2/app/templates/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <h1>PROBANDO DJANGO (RECORDANDO) </h1>
+    <p>Username {{nombre}} - edad {{edad}}</p>}
     <OL>REPASO DE:
         <li>creación de proyecto, previo tener instalado django (pip install django), con python manage.py startproject
         </li>
@@ -38,7 +39,7 @@
 
     </OL>
     <!-- <img src="{% static 'img/config.png' %}" alt=""> -->
-    <p>Tu nombre es {{nombre}} y tu edad {{edad}}</p>}
+
 
     <h3>datos del ISS</h3>
     <p>longitud: <span id="lng">Cargando...</span></p>
